[ADD] social media icons / [FIX] spacing

--- a/src/partials/_entry.scss
+++ b/src/partials/_entry.scss
@@ -41,6 +41,7 @@
 
     ul {
         @include flex-row;
+        gap: 0.25em;
         margin-top: 1.25em;
 
         @include lg-max {
@@ -57,12 +58,12 @@
 
         img {
             @include transition-opacity;
-            width: 2.25em;
+            width: 2em;
             height: auto;
             opacity: 0.7;
 
             @include md-max {
-                width: 2.75em; // wcag ready
+                width: 2.75em;
                 opacity: 1;
             }
         }
